force-app/main/default/objects/SIC__c/fields/Description_Detailed__c.field-meta.xml
<CustomField>
    <fullName>Description_Detailed__c</fullName>
    <label>Description Detailed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>