force-app/main/default/objects/SIC__c/fields/Description_General__c.field-meta.xml
<CustomField>
    <fullName>Description_General__c</fullName>
    <label>Description General</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADMINISTRATION OF ECONOMIC PROGRAMS</fullName>
            </value>
            <value>
                <fullName>ADMINISTRATION OF ENVIRONMENTAL QUALITY AND HOUSING PROGRAMS</fullName>
            </value>
            <value>
                <fullName>ADMINISTRATION OF HUMAN RESOURCE PROGRAMS</fullName>
            </value>
            <value>
                <fullName>AGRICULTURAL PRODUCTION - CROPS</fullName>
            </value>
            <value>
                <fullName>AGRICULTURAL PRODUCTION - LIVESTOCK AND ANIMAL SPECIALTIES</fullName>
            </value>
            <value>
                <fullName>AGRICULTURAL SERVICES</fullName>
            </value>
            <value>
                <fullName>AMUSEMENT AND RECREATION SERVICES</fullName>
            </value>
            <value>
                <fullName>APPAREL AND ACCESSORY STORES</fullName>
            </value>
            <value>
                <fullName>APPAREL, FINISHED PRDCTS FROM FABRICS &amp; SIMILAR MATERIALS</fullName>
            </value>
            <value>
                <fullName>AUTOMOTIVE DEALERS AND GASOLINE SERVICE STATIONS</fullName>
            </value>
            <value>
                <fullName>AUTOMOTIVE REPAIR, SERVICES AND PARKING</fullName>
            </value>
            <value>
                <fullName>BUILDING CNSTRCTN - GENERAL CONTRACTORS &amp; OPERATIVE BUILDERS</fullName>
            </value>
            <value>
                <fullName>BUILDING MATRIALS, HRDWR, GARDEN SUPPLY &amp; MOBILE HOME DEALRS</fullName>
            </value>
            <value>
                <fullName>BUSINESS SERVICES</fullName>
            </value>
            <value>
                <fullName>CHEMICALS AND ALLIED PRODUCTS</fullName>
            </value>
            <value>
                <fullName>COAL MINING</fullName>
            </value>
            <value>
                <fullName>COMMUNICATIONS</fullName>
            </value>
            <value>
                <fullName>CONSTRUCTION - SPECIAL TRADE CONTRACTORS</fullName>
            </value>
            <value>
                <fullName>DEPOSITORY INSTITUTIONS</fullName>
            </value>
            <value>
                <fullName>EATING AND DRINKING PLACES</fullName>
            </value>
            <value>
                <fullName>EDUCATIONAL SERVICES</fullName>
            </value>
            <value>
                <fullName>ELECTRIC, GAS AND SANITARY SERVICES</fullName>
            </value>
            <value>
                <fullName>ELECTRONIC, ELCTRCL EQPMNT &amp; CMPNTS, EXCPT COMPUTER EQPMNT</fullName>
            </value>
            <value>
                <fullName>ENGINEERING, ACCOUNTING, RESEARCH, MANAGEMENT &amp; RELATED SVCS</fullName>
            </value>
            <value>
                <fullName>EXECUTIVE, LEGISLATIVE &amp; GENERAL GOVERNMENT, EXCEPT FINANCE</fullName>
            </value>
            <value>
                <fullName>FABRICATED METAL PRDCTS, EXCEPT MACHINERY &amp; TRANSPORT EQPMNT</fullName>
            </value>
            <value>
                <fullName>FISHING, HUNTING AND TRAPPING</fullName>
            </value>
            <value>
                <fullName>FOOD AND KINDRED PRODUCTS</fullName>
            </value>
            <value>
                <fullName>FOOD STORES</fullName>
            </value>
            <value>
                <fullName>FORESTRY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>