force-app/main/default/objects/SIC__c/fields/Reporting__c.field-meta.xml
<CustomField>
    <fullName>Reporting__c</fullName>
    <label>Reporting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>