force-app/main/default/objects/SIC__c/listViews/All_SIC_codes.listView-meta.xml
<ListView>
    <fullName>All_SIC_codes</fullName>
    <columns>NAME</columns>
    <columns>Description_General__c</columns>
    <columns>Description_Detailed__c</columns>
    <columns>Reporting__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>All SIC codes</label>
    <language>en_US</language>
</ListView>